Revert "build: Remove declarationDir setting from tsconfigs (#18792)"
This reverts commit 90e44ba93a746d4f7bd08f5a6e9e35331156a9d1.

--- a/packages/framework/aqueduct/tsconfig.json
+++ b/packages/framework/aqueduct/tsconfig.json
@@ -6,6 +6,7 @@
 	"include": ["src/**/*"],
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
+		"declarationDir": "./dist",
 		"rootDir": "./src",
 		"outDir": "./dist",
 	},
