--- a/examples/utils/example-utils/tsconfig.json
+++ b/examples/utils/example-utils/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"extends": "@fluidframework/build-common/ts-common-config.json",
 	"compilerOptions": {
+		"declarationDir": "./dist",
 		"rootDir": "./src",
 		"outDir": "./dist",
 	},
