--- a/experimental/PropertyDDS/packages/property-changeset/tsconfig.json
+++ b/experimental/PropertyDDS/packages/property-changeset/tsconfig.json
@@ -3,6 +3,7 @@
 	"exclude": ["src/test/**/*"],
 	"compilerOptions": {
 		"strict": false,
+		"declarationDir": "./dist",
 		"rootDir": "./src",
 		"outDir": "./dist",
 		"composite": true,
