--- a/experimental/PropertyDDS/packages/property-inspector-table/tsconfig.json
+++ b/experimental/PropertyDDS/packages/property-inspector-table/tsconfig.json
@@ -4,6 +4,7 @@
 		"jsx": "react",
 		"resolveJsonModule": true,
 		"typeRoots": ["../node_modules/@types"],
+		"declarationDir": "./dist",
 		"outDir": "./dist",
 	},
 	"exclude": ["dist", "node_modules"],
