Revert "build(protocol-definitions): Produce correct types in ESM build (#18771)"
This reverts commit cbaf3db34ab053bc1d7c3309c472553f44d62f5d.

--- a/common/lib/protocol-definitions/tsconfig.json
+++ b/common/lib/protocol-definitions/tsconfig.json
@@ -1,8 +1,5 @@
 {
-	"extends": [
-		"../../build/build-common/tsconfig.base.json",
-		"../../build/build-common/tsconfig.cjs.json",
-	],
+	"extends": "@fluidframework/build-common/ts-common-config.json",
 	"exclude": ["dist", "node_modules"],
 	"compilerOptions": {
 		"rootDir": "./src",
