--- a/tools/pipelines/build-common-definitions.yml
+++ b/tools/pipelines/build-common-definitions.yml
@@ -37,6 +37,7 @@ trigger:
   paths:
     include:
     - .prettierignore
+    - common/build/build-common
     - common/lib/common-definitions
     - tools/pipelines/build-common-definitions.yml
     - tools/pipelines/templates/build-npm-package.yml
@@ -61,6 +62,7 @@ pr:
   paths:
     include:
     - .prettierignore
+    - common/build/build-common
     - common/lib/common-definitions
     - tools/pipelines/build-common-definitions.yml
     - tools/pipelines/templates/build-npm-package.yml
