--- a/tools/pipelines/templates/include-publish-npm-package.yml
+++ b/tools/pipelines/templates/include-publish-npm-package.yml
@@ -9,7 +9,7 @@ parameters:
 
 - name: pool
   type: object
-  default: Small
+  default: Small-1ES
 
 - name: isReleaseGroup
   type: boolean
@@ -25,7 +25,7 @@ stages:
   variables:
   - group: ado-feeds
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: $(ado-feeds-test) # Comes from the ado-feeds variable group
       feedKind: internal-test
@@ -39,10 +39,8 @@ stages:
   displayName: Publish to internal build feed
   # This condition should match the condition for publish_npm_internal_dev
   condition: and(succeeded(), eq(variables['testBuild'], false))
-  variables:
-  - group: ado-feeds
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: $(ado-feeds-build) # Comes from the ado-feeds variable group
       feedKind: internal-build
@@ -58,10 +56,8 @@ stages:
     displayName: Publish to internal dev feed
     # This condition should match the condition for publish_npm_internal_build
     condition: and(succeeded(), eq(variables['testBuild'], false))
-    variables:
-    - group: ado-feeds
     jobs:
-    - template: include-publish-npm-package-deployment.yml
+    - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
       parameters:
         feedUrl: $(ado-feeds-dev) # Comes from the ado-feeds variable group
         feedKind: internal-dev
@@ -73,10 +69,8 @@ stages:
   dependsOn: build
   displayName: Publish to public npmjs.org
   condition: and(succeeded(), or(eq(variables['release'], 'release'), eq(variables['release'], 'prerelease')))
-  variables:
-  - group: ado-feeds
   jobs:
-  - template: include-publish-npm-package-deployment.yml
+  - template: /tools/pipelines/templates/1ES/include-publish-npm-package-deployment.yml@self
     parameters:
       feedUrl: https://registry.npmjs.org
       feedKind: public
