--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
 	"npm.autoDetect": "off",
 
 	"files.associations": {
-		"tools/pipelines/*.yml": "azure-pipelines",
+		"**/tools/pipelines/**/*.yml": "azure-pipelines",
 		// good-fences' fence files support comments, so detect them as "jsonc" instead of "json":
 		"fence.json": "jsonc",
 		".git-blame-ignore-revs": "ignore",
