fix(client-ephemeral-independent): correct build - fix ESM transpilation (common config set moduleResolution node) - inject package.json in cross compat manner

--- a/experimental/dds/ephemeral-independent/tsconfig.base.json
+++ b/experimental/dds/ephemeral-independent/tsconfig.base.json
@@ -3,6 +3,8 @@
 	"compilerOptions": {
 		"rootDir": "./src",
 		"outDir": "./error-override-outdir-in-main-tsconfig",
+		"module": "Node16",
+		"moduleResolution": "Node16",
 		"composite": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
