--- a/examples/apps/presence-tracker/package.json
+++ b/examples/apps/presence-tracker/package.json
@@ -27,6 +27,7 @@
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
 		"start": "webpack serve",
 		"start:client:test": "webpack serve --config webpack.test.js",
+		"start:tinylicious": "tinylicious",
 		"test": "npm run test:jest",
 		"test:jest": "jest",
 		"test:jest:verbose": "cross-env FLUID_TEST_VERBOSE=1 jest --passWithNoTests",
@@ -68,6 +69,7 @@
 		"prettier": "~3.0.3",
 		"puppeteer": "^17.1.3",
 		"rimraf": "^4.4.0",
+		"tinylicious": "^3.0.0",
 		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.3.0",
 		"typescript": "~5.1.6",
