Loader and some driver changes for Limited Data Virtualization

--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -99,6 +99,9 @@
 			"RemovedInterfaceDeclaration_IPendingLocalState": {
 				"forwardCompat": false,
 				"backCompat": false
+			},
+			"InterfaceDeclaration_IContainerContext": {
+				"backCompat": false
 			}
 		}
 	}
