updates to parameter usage in build-npm-package.yml to use the poolCG parameter and revert the if statement back to parameters.publish

--- a/tools/pipelines/templates/1ES/build-npm-package.yml
+++ b/tools/pipelines/templates/1ES/build-npm-package.yml
@@ -582,10 +582,10 @@ extends:
                       publishLocation: pipeline
 
           # Job - Component detection
-          - ${{ if eq(parameters.pollCG, true) }}:
+          - ${{ if eq(parameters.publish, true) }}:
               - job: CG
                 displayName: Component Detection
-                pool: Small-1ES
+                pool: ${{ parameters.poolCG }}
                 steps:
                   - checkout: self
                     clean: true
