Add push api to telemetry context api

--- a/packages/runtime/runtime-definitions/package.json
+++ b/packages/runtime/runtime-definitions/package.json
@@ -136,6 +136,9 @@
 			"RemovedTypeAliasDeclaration_StableId": {
 				"forwardCompat": false,
 				"backCompat": false
+			},
+			"InterfaceDeclaration_ITelemetryContext": {
+				"forwardCompat": false
 			}
 		}
 	}
