--- a/server/historian/packages/historian/package.json
+++ b/server/historian/packages/historian/package.json
@@ -29,8 +29,8 @@
 	},
 	"dependencies": {
 		"@fluidframework/historian-base": "^0.0.1",
-		"@fluidframework/server-services-shared": "^3.0.0-211732",
-		"@fluidframework/server-services-utils": "^3.0.0-211732",
+		"@fluidframework/server-services-shared": "0.0.0-230623-test",
+		"@fluidframework/server-services-utils": "0.0.0-230623-test",
 		"body-parser": "^1.17.2",
 		"compression": "^1.7.3",
 		"cors": "^2.8.5",
