--- a/packages/loader/container-loader/package.json
+++ b/packages/loader/container-loader/package.json
@@ -177,6 +177,7 @@
 		"@fluidframework/protocol-base": "^3.0.0",
 		"@fluidframework/protocol-definitions": "^3.1.0",
 		"@fluidframework/telemetry-utils": "workspace:~",
+		"@ungap/structured-clone": "^1.2.0",
 		"debug": "^4.3.4",
 		"double-ended-queue": "^2.1.0-0",
 		"events": "^3.1.0",
