--- a/packages/loader/container-loader/package.json
+++ b/packages/loader/container-loader/package.json
@@ -200,6 +200,7 @@
 		"@types/mocha": "^9.1.1",
 		"@types/node": "^18.19.0",
 		"@types/sinon": "^7.0.13",
+		"@types/ungap__structured-clone": "^1.2.0",
 		"c8": "^8.0.1",
 		"copyfiles": "^2.4.1",
 		"cross-env": "^7.0.3",
