Allow enforcing file size write limits in RedisFs

--- a/server/charts/historian/values.yaml
+++ b/server/charts/historian/values.yaml
@@ -71,6 +71,8 @@ gitrest:
     enableRedisFsMetrics: false
     enableHashmapRedisFs: false
     redisApiMetricsSamplingPeriod: 0
+    enforceStrictPersistedFullSummaryReads: false
+    maxRedisFsFileSizeBytes: 0
   redis:
     host: redis
     port: 6379
