--- a/server/gitrest/packages/gitrest/config.json
+++ b/server/gitrest/packages/gitrest/config.json
@@ -53,7 +53,8 @@
 		"enableRedisFsMetrics": true,
 		"enableHashmapRedisFs": false,
 		"redisApiMetricsSamplingPeriod": 0,
-		"enforceStrictPersistedFullSummaryReads": false
+		"enforceStrictPersistedFullSummaryReads": false,
+		"maxRedisFsFileSizeBytes": 0
 	},
 	"redis": {
 		"host": "redis",
