--- a/packages/tools/devtools/devtools-browser-extension/public/manifest.json
+++ b/packages/tools/devtools/devtools-browser-extension/public/manifest.json
@@ -13,7 +13,7 @@
 		},
 		"default_popup": "popup/popup.html"
 	},
-	"permissions": ["activeTab"],
+	"permissions": ["activeTab", "tabs"],
 	"devtools_page": "devtools/devtools.html",
 	"background": {
 		"service_worker": "background/BackgroundScript.js"
