Initial Loader and driver changes for Data Virtualization

--- a/packages/loader/driver-utils/package.json
+++ b/packages/loader/driver-utils/package.json
@@ -117,6 +117,13 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_DocumentStorageServiceProxy": {
+				"forwardCompat": false
+			},
+			"ClassDeclaration_PrefetchDocumentStorageService": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
