--- a/packages/drivers/routerlicious-driver/package.json
+++ b/packages/drivers/routerlicious-driver/package.json
@@ -123,10 +123,10 @@
 		"@fluidframework/driver-base": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/gitresources": "^3.0.0",
-		"@fluidframework/protocol-base": "^3.0.0",
-		"@fluidframework/protocol-definitions": "^3.1.0",
-		"@fluidframework/server-services-client": "^3.0.0",
+		"@fluidframework/gitresources": "^3.0.0-231483",
+		"@fluidframework/protocol-base": "^3.0.0-231483",
+		"@fluidframework/protocol-definitions": "^3.2.0-231454",
+		"@fluidframework/server-services-client": "^3.0.0-231483",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"cross-fetch": "^3.1.5",
 		"json-stringify-safe": "5.0.1",
