--- a/azure/packages/azure-client/package.json
+++ b/azure/packages/azure-client/package.json
@@ -106,10 +106,10 @@
 		"@fluidframework/driver-utils": "workspace:~",
 		"@fluidframework/fluid-static": "workspace:~",
 		"@fluidframework/map": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.1.0",
+		"@fluidframework/protocol-definitions": "^3.2.0-231454",
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
-		"@fluidframework/server-services-client": "^3.0.0",
+		"@fluidframework/server-services-client": "^3.0.0-231483",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^1.6.2"
 	},
