--- a/packages/framework/oldest-client-observer/package.json
+++ b/packages/framework/oldest-client-observer/package.json
@@ -115,7 +115,7 @@
 		"@fluidframework/container-definitions": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/core-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.1.0"
+		"@fluidframework/protocol-definitions": "^3.2.0-231454"
 	},
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.13.3",
