--- a/packages/utils/tool-utils/package.json
+++ b/packages/utils/tool-utils/package.json
@@ -80,7 +80,7 @@
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
 		"@fluidframework/odsp-doclib-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.1.0",
+		"@fluidframework/protocol-definitions": "^3.2.0-231454",
 		"async-mutex": "^0.3.1",
 		"debug": "^4.3.4",
 		"jwt-decode": "^4.0.0",
