Generate DS attach message in ContaineRuntime not DataStoreContext.
Achieves symmetry between DS attach and DDS attach.
Introduces a new function on DSRuntime for getting all the datat needed for attach

--- a/packages/runtime/datastore/package.json
+++ b/packages/runtime/datastore/package.json
@@ -172,6 +172,10 @@
 		}
 	},
 	"typeValidation": {
-		"broken": {}
+		"broken": {
+			"ClassDeclaration_FluidDataStoreRuntime": {
+				"forwardCompat": false
+			}
+		}
 	}
 }
