--- a/packages/framework/client-logger/app-insights-logger/package.json
+++ b/packages/framework/client-logger/app-insights-logger/package.json
@@ -75,7 +75,6 @@
 		"build:compile": "fluid-build . --task compile",
 		"build:docs": "fluid-build . --task api",
 		"build:esnext": "tsc-multi --config ../../../../common/build/build-common/tsc-multi.esm.json",
-		"build:test": "tsc --project ./tsconfig.json",
 		"check:are-the-types-wrong": "attw --pack . --entrypoints .",
 		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
@@ -148,7 +147,11 @@
 					"api-extractor:esnext"
 				],
 				"script": false
-			}
+			},
+			"tsc": [
+				"...",
+				"typetests:gen"
+			]
 		}
 	},
 	"typeValidation": {
