--- a/server/routerlicious/kubernetes/routerlicious/values.yaml
+++ b/server/routerlicious/kubernetes/routerlicious/values.yaml
@@ -61,7 +61,7 @@ nexus:
     enableCustomSocketIoAdapter: true
     shouldDisableDefaultNamespace: false
   socketIo:
-    perMessageDeflate: false
+    perMessageDeflate: true
 
 storage:
   enableWholeSummaryUpload: false
