Adds forced coloring variable to include-vars template and adds ado-feeds group variable to upload pipeline telemetry step of build-npm-package

--- a/tools/pipelines/templates/1ES/build-npm-package.yml
+++ b/tools/pipelines/templates/1ES/build-npm-package.yml
@@ -638,6 +638,7 @@ extends:
               variables:
               - name: pipelineTelemetryWorkdir
                 value: $(Pipeline.Workspace)/pipelineTelemetryWorkdir
+              - group: ado-feeds
               steps:
               - template: /tools/pipelines/templates/include-telemetry-setup.yml@self
                 parameters:
