--- a/tools/pipelines/templates/include-vars.yml
+++ b/tools/pipelines/templates/include-vars.yml
@@ -91,3 +91,9 @@ variables:
 - ${{ if ne(parameters.releaseBuildOverride, 'none') }}:
   - name: release
     value: ${{ parameters.releaseBuildOverride }}
+
+# We use 'chalk' to colorize output, which auto-detects color support in the
+# running terminal.  The log output shown in Azure DevOps job runs only has
+# basic ANSI color support though, so force that in the pipeline
+- name: FORCE_COLOR
+  value: 1
